improved_noise: adopt releaseHandle() + CAS at-most-once free; ship-set 3 classes; RELEASE back to 8
Follow-up to the phantom-reaper bridge (collision resolution with
agent-6a9ec72d's Cleaner variant e2ec502):

- releaseHandle(ImprovedNoise): explicit deterministic release, adopted
  from the sibling variant. Needs the shared AtomicBoolean freed-flag in
  Handle: without it, explicit release racing the reaper would double-free
  one native handle (UB inside the closed .so). Reaper path now routes
  through the same CAS release().
- scripts/build_noise.sh: strict ship-set kept (good idea from the sibling
  variant) but corrected to the 3-class embed contract (Ops, $Handle,
  $Reaper) matching src/improved_noise.rs; NOISE_RELEASE default back to
  8 (major 52) — the phantom design uses no Java 9+ API, unlike Cleaner.
- README: bench/lifecycle pointer.

Final A/B (bench/lifecycle/results/LIFECYCLE_REPORT.md, post-adopt):
hot path t2 1.9x / t4 1.9x / t8 1.6x faster (t1 -14%), quiet reclaim
>12s -> 21-35ms, tickled 540ms -> <5ms, GC under churn 512 -> 21
collections (24x), 20000/20000 freed, 0 leaks.

Live E2E re-verified after adopt: pristine sighting, area_map + noise
self-tests pass, 283 natives 0 unresolved, boot Done (17.2s).

Agent: agent-7625532f